--- a/public/CSS/todoList.css
+++ b/public/CSS/todoList.css
@@ -23,22 +23,7 @@
     display: none;
 }
 
-span {
-    background-color: #e74c3c;
-    height: 40px;
-    margin-right: 20px;
-    text-align: center;
-    color: white;
-    width: 0px;
-    display: inline-block;
-    transition: 0.2s linear;
-    opacity: 0;
-}
 
-li:hover span {
-    width: 40px;
-    opacity: 1;
-}
 h1 {
     background-color: #2980b9;
     color: white;
@@ -50,11 +35,28 @@ h1 {
 
 li {
     height: 40px;
-    line-height: 40px;
-    /* padding: 10px 20px; */
-    background-color: #fff;
+    line-height: 40px;  
     color: #666;
+    background-color: #fff;
 }
+
+li span.delete {
+    background-color: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 0px;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+    padding: 0;
+}
+
+li:hover span.delete{
+    width: 40px;
+    opacity: 1;
+} 
 
 li:nth-child(2n){
     background-color: #f7f7f7;
@@ -90,6 +92,10 @@ body {
 
 .fa-plus {
     float: right;
+}
+
+.fa-trash-alt {
+    height: 30px;
 }
 
 .navbar-brand {
