--- a/public/CSS/todoList.css
+++ b/public/CSS/todoList.css
@@ -1,5 +1,5 @@
 #container {
-    width: 360px;
+    width: 450px;
     margin: 100px auto;
     background-color: #f7f7f7;
     box-shadow: 0 0 3px rbga(0, 0, 0, .1);
@@ -34,10 +34,12 @@ h1 {
 }
 
 li {
-    height: 40px;
+    display: block;
+    height: auto;
     line-height: 40px;  
     color: #666;
     background-color: #fff;
+    overflow: hidden;
 }
 
 li span.delete {
@@ -51,6 +53,14 @@ li span.delete {
     transition: 0.2s linear;
     opacity: 0;
     padding: 0;
+    float: left;
+}
+
+li span.task {
+    word-wrap: break-word;
+    max-width: 260px;
+    float: left;
+    overflow: hidden;
 }
 
 li:hover span.delete{
@@ -76,6 +86,12 @@ input:focus{
     background-color: #fff;
     border: 3px solid #2980b9;
     outline: none;
+}
+
+p {
+    color: #666;
+    padding-right: .25em;
+    padding-left: .25em;
 }
 
 ul {
@@ -116,4 +132,10 @@ body {
 
 .right {
     float: right;
+    padding-right: 25px;
+}
+
+.left{
+    float: left;
+    padding-left: 20px;
 }
