added media queries to optimize for mobile

--- a/public/CSS/todoList.css
+++ b/public/CSS/todoList.css
@@ -139,3 +139,13 @@ body {
     float: left;
     padding-left: 20px;
 }
+
+@media screen and (max-width: 600px){
+    #container {
+        width: 400px;
+    }
+
+    li span.task {
+        width: 200px;
+    }
+}
